--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   <div class="row justify-content-center align-items-center flex-column-reverse flex-md-row">
     <!-- Text Column for Mobile First: It stacks on top when in mobile view -->
     <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center text-column-mobile">
-      <h2>All your upcoming rock concerts in one place</h2>
+      <h2 class="features-heading-text">All your upcoming rock concerts in one place</h2>
       <br>
-      <p>Amplify is the ultimate tool for hard rock fans. Take control of your concert experience by handpicking the shows you're gearing up for. Tell us your preferences, and we'll tailor your Amplify journey to match your unique style of rocking!</p>
+      <p class="features-body-text">Amplify is the ultimate tool for hard rock fans. Take control of your concert experience by handpicking the shows you're gearing up for. Tell us your preferences, and we'll tailor your Amplify journey to match your unique style of rocking!</p>
     </div>
     <!-- Image Column -->
     <div class="col-12 col-md-4 text-center">
@@ -120,9 +120,9 @@
     </div>
     <!-- Text Column -->
     <div class="col-12 col-lg-6 text-lg-left">
-      <h2>Connect with Hard Rock Fans Hitting the Same Shows</h2>
+      <h2 class="features-heading-text">Connect with Hard Rock Fans Hitting the Same Shows</h2>
       <br>
-      <p>Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.</p>
+      <p class="features-body-text">Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.</p>
     </div>
   </div>
 </div>
@@ -131,8 +131,8 @@
   <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
     <!-- Text Column -->
     <div class="col-12 text-center text-container-mobile mb-3"> <!-- Adăugat mb-3 pentru a adăuga spațiu sub text -->
-      <h1>Rock out in a duet or unleash the power of a crowd</h1>
-      <p>Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out? In a massive mosh pit with fellow headbangers, or in a more intimate setting? Are you all about the high energy of the pit, or do you lean towards a more laid-back vibe?</p>
+      <h1 class="features-heading-text">Rock out in a duet or unleash the power of a crowd</h1>
+      <p class="features-body-text">Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out? In a massive mosh pit with fellow headbangers, or in a more intimate setting? Are you all about the high energy of the pit, or do you lean towards a more laid-back vibe?</p>
     </div>
    <!-- Image Column -->
 <div class="col-12 col-md-8 text-md-center text-left text-column-desktop">
@@ -146,10 +146,13 @@
 <div class="container-fluid-features bg-purple2 text-light text-center py-2 py-md-4 py-lg-5">
   <div class="row justify-content-center align-items-center">
     <div class="col-12 mx-auto py-5">
-      <h1 class="display-3">Ready to rock out the concert experience?</h1>
-      <p class="mt-3 mt-md-5">
-        <a href="#" class="btn btn-lg btn-danger my-2">Download our app on AppleStore or GooglePlay</a>
-      </p>
+      <h1 class="display-3 features-heading-text">Ready to rock out the concert experience?</h1>
+      <div class="mt-3 mt-md-5">
+        <img src="images/appstore-badge.svg">
+      </div>
+        <div>
+        <img src="images/google-play-badge.png" class="google-play-badge">
+      </div>
     </div>
   </div>
 </div>
@@ -182,7 +185,7 @@
                 <h6 class="text-uppercase fw-bold mb-4 footer-text">
                   <i class="fas fa-bolt me-3"></i>AMPLIFY
               </h6>
-              <p class="footer-item footer-text">Here we can add some fancy text.</p>
+              <p class="footer-item footer-text">2024</p>
               </div>
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
                 <h6 class="text-uppercase fw-bold mb-4 footer-text">
