--- a/our-story.html
+++ b/our-story.html
@@ -111,9 +111,7 @@
           <p class="mt-2">
             <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Check out our Instagram!</a>
           </p>
-          <div class="scroll-down">
-          <h3>Scroll down to meet our team!</h3>
-        </div>
+          <h3 class="scroll-down">Scroll down to meet our team!</h3>
         </div>
       </div>
     </div>
@@ -241,7 +239,7 @@
                 <h6 class="text-uppercase fw-bold mb-4 footer-text">
                   <i class="fas fa-bolt me-3"></i>AMPLIFY
               </h6>
-              <p class="footer-item footer-text">Here we can add some fancy text.</p>
+              <p class="footer-item footer-text">2024</p>
               </div>
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
                 <h6 class="text-uppercase fw-bold mb-4 footer-text">
