--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center text-column-mobile">
       <h2 class="features-heading-text">All your upcoming rock concerts in one place</h2>
       <br>
-      <p class="features-body-text">Amplify is the ultimate tool for hard rock fans. Take control of your concert experience by handpicking the shows you're gearing up for. Tell us your preferences, and we'll tailor your Amplify journey to match your unique style of rocking!</p>
+      <p class="features-body-text"> Amplify is your backstage pass to the ultimate rock experience. Seize the reins of your concert saga by selecting the gigs that set your soul on fire. Share your tastes with us, and watch as we craft your adventure to resonate with your unique headbanging rhythm. Get ready to rock out loud and unapologetically.
+      </p>
     </div>
     <!-- Image Column -->
     <div class="col-12 col-md-4 text-center">
@@ -122,7 +123,7 @@
     <div class="col-12 col-lg-6 text-lg-left">
       <h2 class="features-heading-text">Connect with Hard Rock Fans Hitting the Same Shows</h2>
       <br>
-      <p class="features-body-text">Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.</p>
+      <p class="features-body-text">Based on your upcoming concert thrills, find and connect directly with hard rock enthusiasts who mirror your vibe and worship the same bands. Find your tribe and crank the volume up with those who rock out like you.</p>
     </div>
   </div>
 </div>
@@ -146,7 +147,7 @@
 <div class="container-fluid-features bg-purple2 text-light text-center py-2 py-md-4 py-lg-5">
   <div class="row justify-content-center align-items-center">
     <div class="col-12 mx-auto py-5">
-      <h1 class="display-3 features-heading-text">Ready to rock out the concert experience?</h1>
+      <h1 class="display-3 features-heading-text">Unleash the amplified concert experience</h1>
       <div class="mt-3 mt-md-5">
         <img src="images/appstore-badge.svg">
       </div>
