--- a/our-story.html
+++ b/our-story.html
@@ -107,7 +107,7 @@
       <div class="col-lg-5 text-center d-flex align-items-center justify-content-center">
         <div>
           <h1 class="fw-bold our-story-text-heading">Amplify</h1>
-          <h2 class="our-story-text-body">The online platform for togetherness!</h2>
+          <h2 class="our-story-text-body">Crank up the volume on your concert experiences with Amplify!</h2>
           <p class="mt-2">
             <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Check out our Instagram!</a>
           </p>
@@ -202,7 +202,7 @@
           data-bs-placement="bottom">Freedom of expression</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="What is life without those exciting, blood rushing moments? From the first song, the headbanging, the distortion of the guitar live, and the encore. It’s hard to explain with words; it's something to feel and experience. Concerts are what makes music and us come alive. After all, we're all here for a good time, not a long one." 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="What’s life if not a chase of those electrifying, adrenaline-pumping moments? Picture the raw power of that first chord, the uncontrollable urge to headbang, the gritty roar of the live guitar, and the energy of the encore. Words can’t scratch the surface; we can only feel the thrill course through our veins. Concerts are our very core. We’re chasing thrills, not counting days. " 
           data-bs-placement="bottom">Adrenaline Rush</button>
         </div>
       </div>
