--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
     <!--Embedeed fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=New+Rocker&family=Tauri&display=swap" rel="stylesheet">
@@ -50,28 +47,11 @@
           <a class="nav-link active accent-color" aria-current="page" href="our-story.html">OUR STORY</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            UX Patterns
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="hero.html">Hero Section</a></li>
-            <li><a class="dropdown-item" href="carousel.html">Carousel</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="two-columns.html">Two-column Layout</a></li>
-            <li><a class="dropdown-item" href="cards.html">Cards</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 GUIDE</a>
-        </li>
-        <!-- Am închis lista anterioară și am deschis o nouă listă pentru elementele 'Corporate' -->
-        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCorporate" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
             <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
-            <!-- Se pot adăuga și alte elemente de listă aici, dacă este necesar -->
           </ul>
         </li>
       </ul>
@@ -91,7 +71,7 @@
         <source src="images/landing-page-video.mp4" type="video/mp4">
         Browserul tău nu suportă elementul video.
       </video>
-      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Click to find out about our app!</a>
+      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Click to Learn More!</a>
     </div>
     
 
@@ -100,7 +80,7 @@
   <div class="row justify-content-center align-items-center flex-column-reverse flex-md-row">
     <!-- Text Column for Mobile First: It stacks on top when in mobile view -->
     <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center text-column-mobile">
-      <h2 class="features-heading-text">All your upcoming rock concerts in one place</h2>
+      <h2 class="features-heading-text">ALL YOUR UPCOMING ROCK CONCERTS IN ONE PLACE</h2>
       <br>
       <p class="features-body-text"> Amplify is your backstage pass to the ultimate rock experience. Seize the reins of your concert saga by selecting the gigs that set your soul on fire. Share your tastes with us, and watch as we craft your adventure to resonate with your unique headbanging rhythm. Get ready to rock out loud and unapologetically.
       </p>
@@ -121,7 +101,7 @@
     </div>
     <!-- Text Column -->
     <div class="col-12 col-lg-6 text-lg-left">
-      <h2 class="features-heading-text">Connect with Hard Rock Fans Hitting the Same Shows</h2>
+      <h2 class="features-heading-text">CONNECT WITH HARD ROCK FANS HITTING THE SAME SHOWS!</h2>
       <br>
       <p class="features-body-text">Based on your upcoming concert thrills, find and connect directly with hard rock enthusiasts who mirror your vibe and worship the same bands. Find your tribe and crank the volume up with those who rock out like you.</p>
     </div>
@@ -132,7 +112,7 @@
   <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
     <!-- Text Column -->
     <div class="col-12 text-center text-container-mobile mb-3"> <!-- Adăugat mb-3 pentru a adăuga spațiu sub text -->
-      <h1 class="features-heading-text">Rock out in a duet or unleash the power of a crowd</h1>
+      <h1 class="features-heading-text">ROCK OUT IN A DUET OR UNLEASH THE POWER OF A CROWD</h1>
       <p class="features-body-text">Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out? In a massive mosh pit with fellow headbangers, or in a more intimate setting? Are you all about the high energy of the pit, or do you lean towards a more laid-back vibe?</p>
     </div>
    <!-- Image Column -->
@@ -147,7 +127,7 @@
 <div class="container-fluid-features bg-purple2 text-light text-center py-2 py-md-4 py-lg-5">
   <div class="row justify-content-center align-items-center">
     <div class="col-12 mx-auto py-5">
-      <h1 class="display-3 features-heading-text">Unleash the amplified concert experience</h1>
+      <h1 class="display-3 features-heading-text">UNLEASH THE AMPLIFIED CONCERT EXPERIENCE:</h1>
       <div class="mt-3 mt-md-5">
         <img src="images/appstore-badge.svg">
       </div>
