--- a/our-story.html
+++ b/our-story.html
@@ -16,11 +16,7 @@
 <!--Embedeed fonts-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,28 +54,11 @@
           <a class="nav-link active accent-color" aria-current="page" href="our-story.html">OUR STORY</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            UX Patterns
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="hero.html">Hero Section</a></li>
-            <li><a class="dropdown-item" href="carousel.html">Carousel</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="two-columns.html">Two-column Layout</a></li>
-            <li><a class="dropdown-item" href="cards.html">Cards</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 Guide</a>
-        </li>
-        <!-- Am închis lista anterioară și am deschis o nouă listă pentru elementele 'Corporate' -->
-        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCorporate" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
             <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
-            <!-- Se pot adăuga și alte elemente de listă aici, dacă este necesar -->
           </ul>
         </li>
       </ul>
@@ -106,12 +85,11 @@
       </div>
       <div class="col-lg-5 text-center d-flex align-items-center justify-content-center">
         <div>
-          <h1 class="fw-bold our-story-text-heading">Amplify</h1>
-          <h2 class="our-story-text-body">Crank up the volume on your concert experiences with Amplify!</h2>
+          <h2 class="our-story-text-body">CRANK UP THE VOLUME ON YOUR CONCERT EXPERIENCES WITH AMPLIFY!</h2>
           <p class="mt-2">
-            <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Check out our Instagram!</a>
+            <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Find us on socials</a>
           </p>
-          <h3 class="scroll-down">Scroll down to meet our team!</h3>
+          <p class="scroll-down">Scroll down to meet our team!</p>
         </div>
       </div>
     </div>
@@ -124,7 +102,7 @@
   <div class="bg-custom-grey">
     <div class="row justify-content-center">
       <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center our-story-body-text">
-        <h2 class="vision-title">Our vision</h2>
+        <h2 class="vision-title">OUR VISION</h2>
         <p class="vision-text">
           In an info-saturated age, linking up with fellow headbangers feels boundless yet rare. Hard rock fans should be able to easily come together to amplify their concert thrills, synchronize their music tastes, and rock out together. Only then can real connections be made in our big, loud world.
         </p>
@@ -184,7 +162,9 @@
      <div class="container">
       <div class="row justify-content-center text-center g-2 our-story-body-text">
         <div class="col-12">
-          <h2 class="our-values-title">Our values</h2>
+          <h2 class="vision-title">OUR VALUES</h2>
+          <br>
+          <br>
           <div class="click-buttons">Click on the buttons to find out more!</div>
           <br>
           <br>
@@ -199,7 +179,7 @@
         </div>
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content=" Your voice is your right to think, to dream, to question. We believe that everyone should be able to express themselves freely and without fear. Dare to be yourself. No one is like you. That is your power." 
-          data-bs-placement="bottom">Freedom of expression</button>
+          data-bs-placement="bottom">Dare to be you</button>
         </div>
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="What’s life if not a chase of those electrifying, adrenaline-pumping moments? Picture the raw power of that first chord, the uncontrollable urge to headbang, the gritty roar of the live guitar, and the energy of the encore. Words can’t scratch the surface; we can only feel the thrill course through our veins. Concerts are our very core. We’re chasing thrills, not counting days. " 
