--- a/corporate.html
+++ b/corporate.html
@@ -174,6 +174,14 @@
               </tr>
               <tr>
                 <th scope="row" class="body-text-corporate">1.</th>
+                <td class="body-text-corporate">ALL</td>
+                <td class="body-text-corporate">VISION: In an info-saturated age, linking up with fellow headbangers feels boundless yet rare. Hard rock fans should be able to easily come together to amplify their concert thrills, synchronize their music tastes, and rock out together. Only then can real connections be made in our big, loud world.</td>
+                <td>
+                  <a href="our-story.html" class="body-text-corporate">OUR VISION</a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row" class="body-text-corporate">1.</th>
                 <td class="body-text-corporate">221906 and 222190</td>
                 <td class="body-text-corporate">Home Page</td>
                 <td>
@@ -552,28 +560,14 @@
           </li>
           <li>For all posts and reels we used detailed and longer captions to keep the attention of the viewer to help with engagement. We also added hashtags to all posts and reels to make them more discoverable. 
           </li>
-          <div class="container">
-            <h2 class="corporate-heading">Content Calendar</h2>  
-            <p class="body-accent">First photo is the first content calendar, CLICK ON THE ARROW for the improved version of our first content calendar, after testing out different posting times.</p>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/first-content-calendar.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/remade-content-calendar.png" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+          <br>
+          <br>
+          <p>First photo is the first content calendar, second is the improved version of our first content calendar, after testing out different posting times.</p>
+          <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+            <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="appendix/second-calendar.pdf" allowfullscreen="allowfullscreen" allow="fullscreen">
+    </iframe>
+  </div>
+  <a href="appendix/second-calendar.pdf">Content Calendars</a>
               <li class="bold-marketing">First content calendar:</li>
             <p>The first few posts were posted at 1pm, 3pm, 6pm and 9 pm in order to determine at what time our posts receive the most engagement. After this we determined that posting posts and reels at 6pm and posting stories at 3pm was the best. 
             </p>
