--- a/corporate.html
+++ b/corporate.html
@@ -202,7 +202,7 @@
           <p class="body-text-corporate"><b>Brand Name:</b> Amplify</p>
           <br>
           <br>
-          <h4  class="body-text-corporate"><i><b>Style Guide:</b></i></h4>
+          <h4  class="body-text-corporate"><i><b>Style Guide and Visual Identity:</b></i></h4>
           <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
           <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;LoDYYep0Ct7D-Dz_K9cmxQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
@@ -213,9 +213,6 @@
           <h4  class="body-text-corporate"><i>Brand Vision</i></h4>
           <p class="body-text-corporate"><b>In an info-saturated age, linking up with fellow headbangers feels boundless yet rare. Hard rock fans should be able to easily come together to amplify their concert thrills, synchronize their music tastes, and rock out together. Only then can real connections be made in our big, loud world.</b></p>
           <a  class="nav-link-corporate" href="appendix/persona.pdf">See Appendix 1 for the Persona</a>
-          <br>
-          <br>
-          <h4  class="body-text-corporate"><i>Visual Identity:</i></h4>
           <br>
           <h4  class="body-text-corporate"><i>Supporting Visuals</i></h4>
           <div class="container-content my-0">
