--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <!--Start of the content-->
     <div class="container-content my-0">
       <video autoplay muted loop id="myVideo">
-        <source src="images/landing-page-video.mp4" type="video/mp4">
+        <source src="images/EDITED-landingpage placeholder.mp4" type="video/mp4">
         Browserul tău nu suportă elementul video.
       </video>
-      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Click to Learn More!</a>
+      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Learn More!</a>
     </div>
     
 
@@ -95,16 +95,16 @@
 
 <div class="container-fluid my-0 bg-purple2">
   <div class="row justify-content-center align-items-center">
-    <!-- Image Column -->
-    <div class="col-12 col-lg-6 my-auto text-center">
-      <img src="images/screen-match.png" alt="Descriere relevantă" class="img-fluid center-block">
-    </div>
     <!-- Text Column -->
     <div class="col-12 col-lg-6 text-lg-left">
       <h2 class="features-heading-text">CONNECT WITH HARD ROCK FANS HITTING THE SAME SHOWS!</h2>
       <br>
       <p class="features-body-text">Based on your upcoming concert thrills, find and connect directly with hard rock enthusiasts who mirror your vibe and worship the same bands. Find your tribe and crank the volume up with those who rock out like you.</p>
     </div>
+   <!-- Image Column -->
+   <div class="col-12 col-lg-6 my-auto text-center">
+    <img src="images/screen-match.png" alt="Descriere relevantă" class="img-fluid center-block">
+  </div>
   </div>
 </div>
 
@@ -117,7 +117,7 @@
     </div>
    <!-- Image Column -->
 <div class="col-12 col-md-8 text-md-center text-left text-column-desktop">
-  <img src="images/screen-profile.png" alt="Descriptive Alt Text" class="img-size-desktop img-fluid">
+  <img src="images/PRJ4_Mockup3.png" alt="Descriptive Alt Text" class="img-size-desktop img-fluid">
 </div>
   </div>
 </div>
