--- a/corporate.html
+++ b/corporate.html
@@ -207,7 +207,7 @@
           <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;LoDYYep0Ct7D-Dz_K9cmxQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;LoDYYep0Ct7D-Dz_K9cmxQ&#x2F;view?utm_content=DAGBdqRMZZw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">STYLE GUIDE</a>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;LoDYYep0Ct7D-Dz_K9cmxQ&#x2F;view?utm_content=DAGBdqRMZZw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Click here if not loading.</a>
 <br>
 <br>
           <h4  class="body-text-corporate"><i>Brand Vision</i></h4>
@@ -233,28 +233,28 @@
           <h4>Color palette</h4>
               <ul class="list-unstyled">
                 <li>
-                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #c84141;"></span>
-                  #EE7622
+                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #B42525;"></span>
+                  #B42525
                   <em>•	Red is a strong hue that frequently connotes intensity, emotion, and energy—elements that are in perfect harmony with the essence of hard rock music. Red can arouse in fans the intense emotion and energy associated with the genre. Because it draws the eye, this color is appropriate for a company that wishes to come across as daring and memorable.
 
                     &hellip;</em>
                 </li>
                 <br>
                 <li>
-                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #1d1c1c;"></span>
-                  #00406B
+                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #36312E;"></span>
+                  #36312E
                   <em>•	Since dark grey is a strong and authoritative color, it could be interpreted as a representation of the firm foundation hard rock music has had throughout music history. Because of its versatility, it can be used to ground branding while allowing for an edge that is very much in keeping with hard rock aesthetics. It may also be readily matched with more brilliant hues. Moreover, dark grey gives the possibility to have a bolder design, making space for bolder colors such as red and yellow. As the genre of rock is always displayed within the colors of strong red and grey or black, this color palette is suitable for Amplify as a brand and for its target audience. &hellip;</em>
                 </li>
                 <br>
                 <li>
-                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #edf11a;"></span>
-                  #EE7622
+                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #FFCD29;"></span>
+                  #FFCD29
                   <em>•	Yellow is used as an accent color to offer an intense touch that draws attention without overpowering the main color scheme. Yellow can stand for the strong energy and bursts of excitement that are connected to electric guitar solos and live performances in the hard rock genre. It's a color that, with its brightness, can energize a brand identity and inspire passion.&hellip;</em>
                 </li>
                 <br>
                 <li>
                   <span class="border border-secondary rounded px-2 me-1" style="background-color: #B18DD4;"></span>
-                  #EE7622
+                  #B18DD4
                   <em>•	A sense of mystery and intricacy can be conveyed by Purple, which is evocative of the depth and occasionally the cryptic or gloomy lyrics present in hard rock music. Due to its historical associations with monarchy and wealth, this hue may lend the brand an air of exclusivity and appeal to fans who value their musical preferences highly and regard them as essential components of who they are. In combination with yellow, being a vibrant, bright, and warm color, using it as an accent against purple produces a striking contrast.&hellip;</em>
                 </li>
                 <br>
@@ -361,6 +361,11 @@
             <li>https://www.pexels.com/video/a-man-is-a-playing-guitar-and-performing-gracefully-6274808/</li>
             <li>https://www.pexels.com/video/a-person-playing-drums-9006152/</li>
             <li>https://www.pexels.com/video/a-guitarist-member-of-a-band-playing-the-electric-guitar-3345545/</li>
+            <br>
+            <em><strong>Sources for Mockups: </strong> </em>
+            <li>https://www.freepik.com/free-psd/digital-device-mockup_4265001.htm#fromView=search&page=1&position=23&uuid=e8df097d-68f6-4208-ad03-5a45757b8ce3</li>
+            <li>https://www.freepik.com/free-psd/full-screen-smartphone-mockup-design_3576506.htm#from_view=detail_alsolike</li>
+            <li>https://www.freepik.com/free-psd/mobile-phone-screen-mockup-design_3384927.htm#query=mockup%20phone&position=14&from_view=keyword&track=ais&uuid=47306009-7361-43d7-bffa-dbdec7e62678#position=14&query=mockup%20phone</li>
             <br>
             <em><strong>Badges: </strong> </em>
           <li>Apple Store Icon: https://developer.apple.com/app-store/marketing/guidelines/ </li>
