--- a/our-story.html
+++ b/our-story.html
@@ -170,19 +170,19 @@
       <div class="row">
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
-          data-bs-placement="bottom">Forming connections</button>
+          data-bs-placement="bottom">FORMING CONNECTIONS</button>
         </div>
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="Laughing until it hurts with your friends, seeing your favorite rock star front row at a concert, saying yes to everything that makes your heart rush, chasing your dreams without stopping at nothing. This is what living life to the fullest means to us. Leave no room for regrets, only unforgettable moments. " 
-          data-bs-placement="bottom">Living life to the fullest</button>
+          data-bs-placement="bottom">LIVING LIFE TO THE FULLEST</button>
         </div>
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content=" Your voice is your right to think, to dream, to question. We believe that everyone should be able to express themselves freely and without fear. Dare to be yourself. No one is like you. That is your power." 
-          data-bs-placement="bottom">Dare to be you</button>
+          data-bs-placement="bottom">DARE TO BE YOU</button>
         </div>
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="What’s life if not a chase of those electrifying, adrenaline-pumping moments? Picture the raw power of that first chord, the uncontrollable urge to headbang, the gritty roar of the live guitar, and the energy of the encore. Words can’t scratch the surface; we can only feel the thrill course through our veins. Concerts are our very core. We’re chasing thrills, not counting days. " 
-          data-bs-placement="bottom">Adrenaline Rush</button>
+          data-bs-placement="bottom">ADRENALINE RUSH</button>
         </div>
       </div>
     </div>
@@ -200,7 +200,7 @@
   </div>
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <div class="me-5 d-none d-lg-block footer-item footer-text">
-          <span><strong>Check out our social media:</strong></span>
+          <span><strong>CHECK OUT OUR SOCIALS:</strong></span>
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
@@ -222,18 +222,18 @@
               </div>
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
                 <h6 class="text-uppercase fw-bold mb-4 footer-text">
-                    Content
+                  CONTENT
                 </h6>
                 <p>
-                  <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
+                  <a class="footer-a" aria-current="page" href="our-story.html">OUR STORY</a>
                 </p>
                 <p>
-                  <a class="footer-a" href="corporate.html">Corporate</a>
+                  <a class="footer-a" href="corporate.html">CORPORATE</a>
                 </p>
               </div>                    
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                 <h6 class="text-uppercase fw-bold mb-4 footer-item footer-text">
-                    Contact
+                    CONTACT
                 </h6>
                 <p class="footer-text"><i class="fas fa-home me-3 footer-item"></i> The Netherlands, Breda</p>
                <div class="d-flex justify-content-center align-items-center">
