--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   </div>
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <div class="me-5 d-none d-lg-block footer-item footer-text">
-          <span><strong>Check out our social media:</strong></span>
+          <span><strong>CHECK OUT OUR SOCIALS:</strong></span>
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
@@ -170,13 +170,13 @@
               </div>
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
                 <h6 class="text-uppercase fw-bold mb-4 footer-text">
-                    Content
+                    CONTENT
                 </h6>
                 <p>
-                  <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
+                  <a class="footer-a" aria-current="page" href="our-story.html">OUR STORY</a>
                 </p>
                 <p>
-                  <a class="footer-a" href="corporate.html">Corporate</a>
+                  <a class="footer-a" href="corporate.html">CORPORATEe</a>
                 </p>
               </div>                    
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
