--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <a class="footer-a" aria-current="page" href="our-story.html">OUR STORY</a>
                 </p>
                 <p>
-                  <a class="footer-a" href="corporate.html">CORPORATEe</a>
+                  <a class="footer-a" href="corporate.html">CORPORATE</a>
                 </p>
               </div>                    
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
